--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "AMD",
-    "outFile": "dist/index.js",
+    "target": "ES6",
+    "module": "commonjs",
+    "rootDir": "./src",
     "sourceMap": true,
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "moduleResolution": "node"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
